--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.iFrameResizer = {
+      targetOrigin: 'http://localhost.experify.io'
+    }
+  </script>
   <script charset="utf-8" src="iframeresizer.contentWindow.js"></script>
 </head>
 <body>
