--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script>
-    window.iFrameResizer = {
-      targetOrigin: 'http://localhost.experify.io'
-    }
-  </script>
-  <script charset="utf-8" src="iframeresizer.contentWindow.js"></script>
+  <script type="text/javascript">     
+     
+    window.onload = function postFunction() {
+      var body = document.body, html = document.documentElement;
+
+      var height = Math.max( body.scrollHeight, body.offsetHeight, 
+                            html.clientHeight, html.scrollHeight, html.offsetHeight );
+
+      parent.postMessage(height, "http://localhost.experify.io:8000");// here we specify our single domain to go to      
+    }  
+  </script> 
+  <script charset="utf-8" src="iframeResizer.contentWindow.js"></script>
 </head>
-<body>
+<body >
+  awdawdawwadawddd
   <app-root></app-root>
 </body>
 </html>
