--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript">     
      
     window.onload = function postFunction() {
+      console.log("poc");
       var body = document.body, html = document.documentElement;
 
       var height = Math.max( body.scrollHeight, body.offsetHeight, 
@@ -20,7 +21,6 @@
   <script charset="utf-8" src="iframeResizer.contentWindow.js"></script>
 </head>
 <body >
-  awdawdawwadawddd
   <app-root></app-root>
 </body>
 </html>
